fix position small screen for box

--- a/stylesheet/style-all-screen-middle.css
+++ b/stylesheet/style-all-screen-middle.css
@@ -986,7 +986,7 @@ margin: 0 auto;
 
 
 
-// DEUX AUTRES BOXES (hidden for now in the HTML)
+// DEUX AUTRES BOXES
 
 .all-box-2 {
   position: relative;
@@ -1049,6 +1049,28 @@ margin: 0 auto;
   animation: alternate;
 }
 
+@media screen and (max-width: 650px) {
+      .text-box-3 {
+  font-size: 50px;
+  position: absolute;
+  top: 300px; left: 50px; /* à 50%/50% du parent référent */
+  color: white;
+  transition-property: transform;
+  transition-duration: 0.5s;
+  transition-timing-function: ease; /* Transition de type ease */
+}
+    }
+
+@media screen and (max-width: 650px) {
+      .text-box-hover-3 {
+  transition-property: transform;
+  transition-duration: 0.5s;
+  transition-timing-function: ease; /* Transition de type ease */
+   transform: translateY(-220px); /* On déplace l'objet */
+  animation: alternate;
+}
+    }
+
 .text-box-3-p {
   font-family: 'Open Sans', sans-serif;
   font-weight: lighter;
@@ -1070,6 +1092,16 @@ margin: 0 auto;
    transform: translateY(-200px); /* On déplace l'objet */
   animation: alternate;
 }
+
+@media screen and (max-width: 545px) {
+      .text-box-hover-3-p {
+        transition-property: transform;
+  transition-duration: 0.5s;
+  transition-timing-function: ease; /* Transition de type ease */
+   transform: translateY(-220px); /* On déplace l'objet */
+  animation: alternate;
+      }
+    }
 
 .btn-box-3 {
   position: absolute;
@@ -1113,7 +1145,6 @@ margin: 0 auto;
   background: black;
 }
 
-
 .img-bg-4 {
   background-image: url(../images/be-bg-box.jpg);
   width: 490px;
@@ -1139,6 +1170,7 @@ margin: 0 auto;
 
 .text-box-4 {
   font-size: 50px;
+  max-width: 80%;
   position: absolute;
   top: 350px; left: 50px; /* à 50%/50% du parent référent */
   color: white;
@@ -1154,6 +1186,28 @@ margin: 0 auto;
    transform: translateY(-220px); /* On déplace l'objet */
   animation: alternate;
 }
+
+@media screen and (max-width: 650px) {
+      .text-box-4 {
+  font-size: 50px;
+  position: absolute;
+  top: 300px; left: 50px; /* à 50%/50% du parent référent */
+  color: white;
+  transition-property: transform;
+  transition-duration: 0.5s;
+  transition-timing-function: ease; /* Transition de type ease */
+}
+    }
+
+@media screen and (max-width: 650px) {
+      .text-box-hover-4 {
+  transition-property: transform;
+  transition-duration: 0.5s;
+  transition-timing-function: ease; /* Transition de type ease */
+   transform: translateY(-220px); /* On déplace l'objet */
+  animation: alternate;
+}
+    }
 
 .text-box-4-p {
   font-family: 'Open Sans', sans-serif;
@@ -1243,50 +1297,7 @@ margin: 0 auto;
     }
 
 
-@media screen and (max-width: 650px) {
-      .text-box-4 {
-  font-size: 50px;
-  position: absolute;
-  top: 300px; left: 50px; /* à 50%/50% du parent référent */
-  color: white;
-  transition-property: transform;
-  transition-duration: 0.5s;
-  transition-timing-function: ease; /* Transition de type ease */
-}
-    }
 
-@media screen and (max-width: 650px) {
-      .text-box-hover-4 {
-  transition-property: transform;
-  transition-duration: 0.5s;
-  transition-timing-function: ease; /* Transition de type ease */
-   transform: translateY(-130px); /* On déplace l'objet */
-  animation: alternate;
-}
-    }
-
-
-@media screen and (max-width: 650px) {
-      .text-box-3 {
-  font-size: 50px;
-  position: absolute;
-  top: 300px; left: 50px; /* à 50%/50% du parent référent */
-  color: white;
-  transition-property: transform;
-  transition-duration: 0.5s;
-  transition-timing-function: ease; /* Transition de type ease */
-}
-    }
-
-@media screen and (max-width: 650px) {
-      .text-box-hover-3 {
-  transition-property: transform;
-  transition-duration: 0.5s;
-  transition-timing-function: ease; /* Transition de type ease */
-   transform: translateY(-130px); /* On déplace l'objet */
-  animation: alternate;
-}
-    }
 
 .separateur3 {
   height: 100px;
